# vad_deepgram

./: .dockerignore  Cargo.toml  Dockerfile
src/: main.rs
