[package]
name = "vad_deepgram"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
ezsockets = { version = "0.6.2", features = ["rustls"], default-features = false }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
voice_activity_detector = "0.0.6"
