[package]
name = "vad_deepgram"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bytes = "1.6.0"
deepgram = "0.4.0"
ezsockets = { version = "0.6.2", features = ["rustls"] }
futures = "0.3.30"
samplerate = "0.2.4"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
voice_activity_detector = "0.0.6"
